[metadata]
package_name = pyfalco
description = Fast Linearized Coronagraph Optimizer
long_description = Fast Linearized Coronagraph Optimizer
author = A J Eldorado Riggs and collaborators
author_email = aj.riggs@jpl.nasa.gov
license = Apache
edit_on_github = False
github_project = ajeldorado/falco-python
description-file = README.rst
url = https://github.com/ajeldorado/falco-python
homepage = https://github.com/ajeldorado/falco-python
# version should be PEP386 compatible (http://www.python.org/dev/peps/pep-0386)
version = 3.2.0

[build-sphinx]
source-dir = docs
build-dir = docs
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build

# Python code quality checker
[flake8]
# See http://flake8.pycqa.org/en/latest/user/configuration.html
exclude: .git, __pycache__, test*
max-line-length = 120
